
LOW PRIORITY:
- change layout of molecule counts display
- generalize layout code
- address Kathy's problem with prototype and Java 1.4 Random class

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects


DONE:
6/25/08 - fix Liquid.pHCombined
6/25/08 - reset liquid model in "reset all"
6/25/08 - fill to 1L on startup or reset
6/25/08 - remove "Choose a liquid" choice from liquid faucet, no longer needed
6/25/08 - create a custom confirmation dialog with "don't ask me again" check box
6/25/08 - request confirmation when changing liquid
6/25/08 - workaround for incorrect pH model for combined liquids
6/25/08 - clean up Liquid model, javadoc, symmetry, etc.
6/24/08 - change pH property to type Double, null mean undefined
6/24/08 - disable slider when beaker is empty
6/24/08 - wire up units controls on bar graph
6/24/08 - add ability to dilute with water
6/24/08 - add ability to add a liquid
6/24/08 - add ability to drain liquid
6/24/08 - delete Beaker from model, not needed
6/24/08 - add column of liquid coming out of faucets
6/24/08 - change from scientific notation to custom format for values
6/24/08 - add LiquidNode
6/24/08 - display values on bar graph for concentration and moles
6/24/08 - wire up some stuff to model
6/24/08 - implement model (pH, concentration, moles, volume, etc)
6/17/08 - add tick marks to beaker
6/17/08 - lots of reorganization and changes
6/17/08 - add Water to liquid types
6/13/08 - add interfaces to support Reset All
6/13/08 - use phetcommon's ResetAllButton
6/13/08 - refactor "Reset All" button so that it can be used outside of ControlPanel
6/13/08 - start to wire things up to the model
6/13/08 - hook up Molecule Count check box
6/13/08 - generalize canvas layout code, 3 main nodes on canvas (beaker, pH slider, graph)
6/13/08 - hook up pH text field and slider